# xarray-simlab-ode

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  junit.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_linked_overrides.py
.circleci/: config.yml
conda.recipe/: meta.yaml
docs/: Makefile  about.md  api.rst  citation.md  conf.py  example.ipynb  index.md  index.rst  install.md  make.bat  requirements.txt  workflow1_framework.rst  workflow2_variables_components.rst  workflow3_models.rst  workflow_models.md  workflow_variables_components.md
src/xso/: __init__.py  backendcomps.py  component.py  core.py  main.py  model.py  parscans.py  solvers.py  variables.py  xsimlabwrappers.py
src/xso/tests/: _parallel_workers.py  conftest.py  test_foreign_param.py  test_index_as_parameter.py  test_parscan_array_param.py  test_run_parallel_tasks.py  test_setup_func_param.py  test_setup_func_with_foreign.py  test_solver_kwargs.py
tests/: FirstTests.ipynb  MinimalModelExample.ipynb  TestPhydraComps.ipynb  XSO_building.ipynb  test_cli.py  test_lab_notebook.ipynb  test_xso.py
xso/: __init__.py  __main__.py  _component.py  _core.py  _model.py  _solvers.py  _version.py  cli.py  component.py  core.py  main.py  model.py  solvers.py  variable.py  variables.py  xsimlabwrappers.py
