[tool.poetry]
name = "xso"
version = "0.0.3"
description = "Framework for building and solving ODE-based models, an extension of xarray-simlab"
authors = ["Benjamin Post"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
xarray-simlab = "^0.5.0"
scipy = ">=1.9.1"
dask = {extras = ["distributed"], version = ">=2022.10.0"}
zarr = ">= 2.3.0"
xarray = ">=0.10.0"
numpy = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
myst-nb = {version = "^0.16.0", python = "^3.9"}
sphinx-autoapi = "^2.0.0"
sphinx-toolbox = "*"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
